--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,1 +1,16 @@
-Some of the chamnges to be made here.
+on: push
+name: 🚀 Deploy website on push
+jobs:
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ftp.samkirkland.com
+        username: ${{ secrets.ftp_username }}
+        password: ${{ secrets.ftp_password }}
