--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -9,8 +9,8 @@ deployment:
     - /bin/cp -R fonts $DEPLOYPATH
     - /bin/cp -R img $DEPLOYPATH
     - /bin/cp -R js $DEPLOYPATH
-    - /bin/cp apply.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
-    - /bin/cp support.html $DEPLOYPATH
-    - /bin/cp wallx.css $DEPLOYPATH
-    - /bin/cp index.html $DEPLOYPATH
+     /bin/cp apply.html $DEPLOYPATH
+     /bin/cp style.css $DEPLOYPATH
+     /bin/cp support.html $DEPLOYPATH
+     /bin/cp wallx.css $DEPLOYPATH
+     /bin/cp index.html $DEPLOYPATH
